# cts-work

./: .gitignore  CMakeLists.txt  Doxyfile  FragmentShader.glsl  LICENSE  Prj.cw  README.md  build.bat
app/: CMakeLists.txt  functions.cpp  functions.h  main.cpp
app/shaders/: VertexShader.glsl
cmake/: get_conan.cmake  get_glew.cmake  get_opencv.cmake
